fixed layout problem with introduction.html - introduced optional removal of <br /> tags from generated html

--- a/data/epub_files/css/clauses.css
+++ b/data/epub_files/css/clauses.css
@@ -75,10 +75,6 @@ br {
   margin-bottom: 0.2em;
 }
 
-.LongTitle br {
-  display: none;
-}
-
-.WordsOfEnactment .Bpara br {
-  display: none;
+#table-of-contents br {
+	display: none;
 }
